tests/purs/failing/MissingClassMember.out
Error found:
at tests/purs/failing/MissingClassMember.purs:9:1 - 10:10 (line 9, column 1 - line 10, column 10)

  The following type class members have not been implemented:
  [33mb :: String -> Number[0m
  [33mc :: forall f. String -> f String[0m

in type class instance
[33m               [0m
[33m  Main.A String[0m
[33m               [0m

See https://github.com/purescript/documentation/blob/master/errors/MissingClassMember.md for more information,
or to contribute content related to this error.

